--- a/platformio.ini
+++ b/platformio.ini
@@ -14,3 +14,4 @@ board = esp32dev
 framework = arduino
 monitor_speed = 115200
 board_build.filesystem = littlefs
+lib_deps = arduino-libraries/Servo@^1.3.0
